--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" /><!--testing-->
+    <meta charset="utf-8" />
     <title>Project Z</title>
     <meta name="viewport" content="width=device-width, inital scale=1">
 
