--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/form.css">
     <link rel="stylesheet" href="styles/button.css">
+    <link rel="stylesheet" href="styles/media-queries.css">
 
 </head>
 <body>
@@ -63,7 +64,7 @@
                     <i class="fas fa-map-marker-alt"></i>
 
                     <div>
-                        1234 Any St<br>Scottsdale, AZ, 85251
+                        1234 Any Street Scottsdale, AZ, 85251
                     </div>
                 </div>
 
@@ -98,6 +99,8 @@
                     <textarea name="message" id="message"placeholder="Message"></textarea>
                     <label for="message">Message</label>
                 </div>
+
+                <div class="spacer10"></div>
 
                 <div class="centered-button-wrapper">
                     <button type="submit" class="btn">Send</button>
